k8s-manifests/swa-app-deploy.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "simple-app-server"
  namespace: "default"
  labels:
    app: "simple-app-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "simple-app-server"
  template:
    metadata:
      labels:
        app: "simple-app-server"
    spec:
      containers:
        - name: "simple-app-server"
          image: "ganeshkaila/simple-app-server:v0.2"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
