k8s-manifests/nginx-service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "nginx-1-service"
  namespace: "default"
  labels:
    app: "nginx-1"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  selector:
    app: "nginx-1"
  type: "LoadBalancer"
  loadBalancerIP: ""
