k8s-manifests/swa-app-svc.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "simple-app-server"
  namespace: "default"
  labels:
    app: "simple-app-server"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8081
  selector:
    app: "simple-app-server"
  type: "LoadBalancer"
  loadBalancerIP: ""
