k8s-manifests/swa-app.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "simple-app-server"
  namespace: "default"
  labels:
    app: "simple-app-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "simple-app-server"
  template:
    metadata:
      labels:
        app: "simple-app-server"
    spec:
      containers:
        - name: "simple-app-server"
          image: "ganeshkaila/simple-app-server:amd64"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "simple-app-server"
  namespace: "default"
  # annotations:
  #   networking.gke.io/load-balancer-type: "Internal"
  labels:
    app: "simple-app-server"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8081
  selector:
    app: "simple-app-server"
  type: "ClusterIP"
