k8s-manifests/swa-db-ep.yml
---
apiVersion: "v1"
kind: "Endpoints"
metadata:
  name: "pgdbhost"
  namespace: "default"
subsets:
  - addresses:
      - ip: 34.86.7.175
    ports:
      - port: 5432
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pgdbhost"
  namespace: "default"
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
