k8s-manifests/swa-db.yml
---
apiVersion: "v1"
kind: "Endpoints"
metadata:
  name: "pgdbhost"
  namespace: "default"
subsets:
  - addresses:
      - ip: 34.145.160.8 # eks
    ports:
      - port: 5432
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pgdbhost"
  namespace: "default"
  # annotations:
  #   networking.gke.io/load-balancer-type: "Internal"
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
