k8s-manifests/swa-ui-svc.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "simple-web-ui"
  namespace: "default"
  labels:
    app: "simple-web-ui"
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: "simple-web-ui"
  type: "LoadBalancer"
  loadBalancerIP: ""
